--- a/.github/workflows/daily-m365-heartbeat.yml
+++ b/.github/workflows/daily-m365-heartbeat.yml
@@ -37,5 +37,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: heartbeat-logs
-        path: ${{ github.workspace }}/heartbeat-success-$(date).log
+        path: ${{ github.workspace }}/heartbeat-success.log
         retention-days: 1
